[package]
name = "into_ext"
version = "0.0.0"
authors = ["Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Extension trait for the ‘Into’ trait, offering a method ‘.into_::<T>()’ to specify the target type of conversion.
"""
repository = "https://github.com/steffahn/template_crate"
homepage = "https://github.com/steffahn/template_crate"
documentation = "https://docs.rs/template_crate"
keywords = ["into", "conversion"]
categories = ["no-std", "rust-patterns"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
